--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: pink;
+  background: pink;
 }
 
 h1 {
@@ -18,7 +18,7 @@ h2 {
   font-size:12px;
 }
 
-#tasks.completed {
-  background-color: #ccc;
+#tasks .completed {
+  background : #ccc;
   text-decoration: underline;
 }
